openpearl-code/testsuite/must_not_compile/00_basics/009_multiple_problem_statements.expect
009_multiple_problem_statements.prl:6:0: ERROR : Syntax error :extraneous input 'PROBLEM' expecting {'MODEND', 'SPECIFY', 'SPC', 'DECLARE', 'DCL', '__cpp__', '__cpp', 'LENGTH', ID}
PROBLEM;
      ^
