openpearl-code/testsuite/must_not_compile/00_basics/009_multiple_problem_statements.prl
MODULE(m1);

PROBLEM;
  DCL f FIXED;

PROBLEM;

MODEND;
